add java opens for Spark